     Stylus C110 and C120 to reduce banding at the expense of some
     output performance.  These offer improvements primarily for
     grayscale output.

  20) A problem whereby the CUPS driver could consume excessive
     amounts of CPU and generate no output with Epson PictureMate and
     E-series compact photo printers has been fixed.


----------------

* CHANGES FROM GUTENPRINT 5.2.0-BETA2:

  1) A problem whereby some rows are not printed in color on the Epson
     Stylus CX3700 and related printers has been fixed.

  2) A problem whereby with certain combinations of options the output
     appeared discontinuous (gradients would get darker then abruptly
     lighten) has been fixed.

  3) escputil now distinguishes between the two black cartridges in
     the Epson Stylus C120.

  4) Printing speed, and possibly quality, have been improved in
     certain cases on newer Epson inkjet printers (C120, Stylus Photo
     2400, RX700, and all printers using Claria ink).  The speed
     improvement should be most noticeable with plain paper at lower
     resolutions.  Quality improvements may or may not be noticeable.

  5) The Epson driver is in the process of being converted to use data
     stored in files external to the binary library.  While this
     should have no impact on end-user use, it is a substantial change
     that people should be aware of.  Please report any issues.

  6) Test coverage has been significantly increased.

  7) New printers supported in this release:

     - Epson inkjet printers:

       Offirio PX-B500 (preliminary)
       Offirio PX-B300 (preliminary)

     - Black and white laser printers:

       Brother DCP-8045D
       Brother HL-1430
       Brother HL-1450
       Brother HL-1470N
       Brother HL-1650
       Brother HL-1670N
       Brother HL-1850
       Brother HL-1870N
       Brother HL-2060
       Brother HL-2460
       Brother HL-2460N
       Brother HL-5030
       Brother HL-5040
       Brother HL-5050